made views more uniform and fixed naming of IDs

--- a/Assist/app/src/main/res/layout/activity_add_contact.xml
+++ b/Assist/app/src/main/res/layout/activity_add_contact.xml
@@ -10,7 +10,7 @@
         layout="@layout/toolbar_edit" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/ivProfilePic"
+        android:id="@+id/iv_add_contact_picture"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginTop="8dp"
@@ -21,31 +21,32 @@
         app:layout_constraintTop_toBottomOf="@+id/include2" />
 
     <TextView
-        android:id="@+id/tvAddPhoto"
+        android:id="@+id/tv_add_contact_add_pic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/amiko_semibold"
         android:text="Add Photo"
         android:textColor="#116ACC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_add_contact_picture" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glLeft2"
+        android:id="@+id/gl_add_contact_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="30dp" />
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glRight2"
+        android:id="@+id/gl_add_contact_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="30dp" />
+        app:layout_constraintGuide_percent="0.95" />
 
-    <TextView
-        android:id="@+id/tvFName"
+    <EditText
+        android:id="@+id/et_add_contact_fname"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
@@ -54,19 +55,18 @@
         android:background="@drawable/round_corner"
         android:drawableLeft="@drawable/personicon"
         android:drawablePadding="8dp"
-
+        android:fontFamily="@font/amiko_semibold"
         android:gravity="center_vertical"
         android:hint="First Name"
         android:paddingTop="4dp"
-        android:paddingBottom="4dp"
         android:textColor="@color/gray"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/glRight2"
-        app:layout_constraintStart_toStartOf="@+id/glLeft2"
-        app:layout_constraintTop_toBottomOf="@+id/tvAddPhoto" />
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_contact_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_contact_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_contact_add_pic" />
 
-    <TextView
-        android:id="@+id/tvLName"
+    <EditText
+        android:id="@+id/et_add_contact_lname"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
@@ -75,19 +75,18 @@
         android:background="@drawable/round_corner"
         android:drawableLeft="@drawable/personicon"
         android:drawablePadding="8dp"
-
+        android:fontFamily="@font/amiko_semibold"
         android:gravity="center_vertical"
         android:hint="Last Name"
         android:paddingTop="4dp"
-        android:paddingBottom="4dp"
         android:textColor="@color/gray"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/glRight2"
-        app:layout_constraintStart_toStartOf="@+id/glLeft2"
-        app:layout_constraintTop_toBottomOf="@+id/tvFName" />
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_contact_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_contact_left"
+        app:layout_constraintTop_toBottomOf="@+id/et_add_contact_fname" />
 
-    <TextView
-        android:id="@+id/tvNumber"
+    <EditText
+        android:id="@+id/et_add_contact_number"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
@@ -96,19 +95,18 @@
         android:background="@drawable/round_corner"
         android:drawableLeft="@drawable/phoneicon_red"
         android:drawablePadding="8dp"
-
+        android:fontFamily="@font/amiko_semibold"
         android:gravity="center_vertical"
         android:hint="Phone Number"
         android:paddingTop="4dp"
-        android:paddingBottom="4dp"
         android:textColor="@color/gray"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/glRight2"
-        app:layout_constraintStart_toStartOf="@+id/glLeft2"
-        app:layout_constraintTop_toBottomOf="@+id/tvLName" />
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_contact_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_contact_left"
+        app:layout_constraintTop_toBottomOf="@+id/et_add_contact_lname" />
 
-    <TextView
-        android:id="@+id/tvPName"
+    <EditText
+        android:id="@+id/et_add_contact_guardian"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
@@ -117,37 +115,37 @@
         android:background="@drawable/round_corner"
         android:drawableLeft="@drawable/parenticon_red"
         android:drawablePadding="8dp"
-
+        android:fontFamily="@font/amiko_semibold"
         android:gravity="center_vertical"
         android:hint="Guardian"
         android:paddingTop="4dp"
-        android:paddingBottom="4dp"
         android:textColor="@color/gray"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/glRight2"
-        app:layout_constraintStart_toStartOf="@+id/glLeft2"
-        app:layout_constraintTop_toBottomOf="@+id/tvNumber" />
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_contact_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_contact_left"
+        app:layout_constraintTop_toBottomOf="@+id/et_add_contact_number" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilGrp"
+        android:id="@+id/til_add_contact_groups"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/glRight2"
-        app:layout_constraintStart_toStartOf="@+id/glLeft2"
-        app:layout_constraintTop_toBottomOf="@+id/tvPName">
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_contact_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_contact_left"
+        app:layout_constraintTop_toBottomOf="@+id/et_add_contact_guardian">
 
         <AutoCompleteTextView
-            android:id="@+id/autoChecklists"
+            android:id="@+id/ac_add_event_groups"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-
+            android:fontFamily="@font/amiko_semibold"
             android:inputType="none"
             android:text="Groups"
+            android:textColor="@color/gray"
             android:textSize="18sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
