--- a/Assist/app/src/main/res/layout/activity_calendar_year.xml
+++ b/Assist/app/src/main/res/layout/activity_calendar_year.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".CalendarYearActivity">
 
+    <include
+        android:id="@+id/include9"
+        layout="@layout/toolbar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
