--- a/Assist/app/src/main/res/layout/activity_event_view.xml
+++ b/Assist/app/src/main/res/layout/activity_event_view.xml
@@ -6,32 +6,37 @@
     android:layout_height="match_parent"
     android:backgroundTint="@color/red">
 
+    <include
+        android:id="@+id/include9"
+        layout="@layout/toolbar_view" />
+
     <TextView
         android:id="@+id/tv_view_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif-black"
-        android:text="7:00 am - 8:30 am"
-        android:textSize="16sp"
-        android:drawableLeft="@drawable/clock_icon"
+        android:drawableLeft="@drawable/clockicon_blue"
         android:drawablePadding="8dp"
+        android:fontFamily="@font/amiko_semibold"
+        android:text="7:00 am - 8:30 am"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_view_date"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_date" />
 
     <TextView
         android:id="@+id/tv_view_template"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Biology Exam #1 Template"
-        android:textSize="16sp"
-        android:drawableLeft="@drawable/template_icon"
+        android:drawableLeft="@drawable/documenticon_blue"
         android:drawablePadding="8dp"
+        android:fontFamily="@font/amiko_semibold"
+        android:text="Biology Exam #1 Template"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
@@ -42,11 +47,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif-black"
-        android:drawableLeft="@drawable/bell_icon"
+        android:drawableLeft="@drawable/notificon_blue"
         android:drawablePadding="8dp"
+        android:fontFamily="@font/amiko_semibold"
         android:text="1 hour before"
-        android:textSize="16sp"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
@@ -56,62 +62,53 @@
         android:id="@+id/tv_view_event_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:fontFamily="sans-serif-medium"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/amiko_bold"
         android:text="Biology Exam #1"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_view_event_groups"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="@string/groups"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_view_reminder" />
-
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/cg_view_groups"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
-        app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_view_event_groups"/>
-
-    <Button
-        android:id="@+id/btn_view_delete_event"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="@color/red"
-        android:text="@string/delete_event"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/include9" />
 
     <TextView
         android:id="@+id/tv_view_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Wednesday, August 11, 2021"
-        android:textSize="16sp"
-        android:drawableLeft="@drawable/calendar_icon"
+        android:drawableLeft="@drawable/calendaricon_blue"
         android:drawablePadding="8dp"
+        android:fontFamily="@font/amiko_semibold"
+        android:text="Wednesday, August 11, 2021"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_view_event_name"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_event_name" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_edit_event_groups"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_reminder">>
+
+        <AutoCompleteTextView
+            android:id="@+id/ac_edit_event_groups"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
+            android:inputType="none"
+            android:text="Groups"
+            android:textColor="@color/gray"
+            android:textSize="18sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_view_event_left"
