--- a/Assist/app/src/main/res/layout/activity_calendar_day.xml
+++ b/Assist/app/src/main/res/layout/activity_calendar_day.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     tools:context=".CalendarDayActivity">
 
+    <include
+        android:id="@+id/include9"
+        layout="@layout/toolbar_date" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,10 +22,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00FFFFFF"
+            android:fontFamily="@font/amiko_bold"
+            android:onClick="prevWeek"
             android:text="prev"
             android:textColor="@color/blue"
             android:textSize="20sp"
-            android:onClick="prevWeek"
             android:textStyle="bold" />
 
         <TextView
@@ -29,8 +34,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:fontFamily="@font/amiko_semibold"
             android:text="@string/calendar"
             android:textAlignment="center"
+            android:textColor="@color/gray"
             android:textSize="20sp" />
 
         <Button
@@ -39,8 +46,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00FFFFFF"
-            android:text="next"
+            android:fontFamily="@font/amiko_bold"
             android:onClick="nextWeek"
+            android:text="next"
             android:textColor="@color/blue"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -56,56 +64,70 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="SUN"
             android:textAlignment="center"
+            android:textColor="@color/gray"
             android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="MON"
             android:textAlignment="center"
+            android:textColor="@color/gray"
             android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="TUE"
             android:textAlignment="center"
+            android:textColor="@color/gray"
             android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="WED"
             android:textAlignment="center"
+            android:textColor="@color/gray"
             android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="THU"
             android:textAlignment="center"
+            android:textColor="@color/gray"
             android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="FRI"
             android:textAlignment="center"
+            android:textColor="@color/gray"
             android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="SAT"
             android:textAlignment="center"
+            android:textColor="@color/gray"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -114,18 +136,19 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
-    
+
     <Button
         android:id="@+id/btn_calendar_day_add_event"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_event"
-        android:background="@drawable/clear_button"
         android:layout_gravity="center"
+        android:background="@drawable/clear_button"
+        android:fontFamily="@font/amiko_bold"
+        android:onClick="addEventToday"
+        android:text="@string/add_event"
         android:textColor="@color/blue"
         android:textSize="20sp"
-        android:onClick="addEventToday"
-        />
+        app:backgroundTint="#116ACC"/>
     
     <ListView
         android:layout_width="match_parent"
