--- a/Assist/app/src/main/res/layout/activity_calendar_month.xml
+++ b/Assist/app/src/main/res/layout/activity_calendar_month.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     tools:context=".CalendarMonthActivity">
 
+    <include
+        android:id="@+id/include9"
+        layout="@layout/toolbar_date" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,8 +23,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00FFFFFF"
-            android:text="prev"
+            android:fontFamily="@font/amiko_bold"
             android:onClick="prevMonth"
+            android:text="prev"
             android:textColor="@color/blue"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -28,11 +33,13 @@
         <TextView
             android:id="@+id/tv_calendar_month"
             android:layout_width="0dp"
-            android:layout_weight="2"
-            android:textAlignment="center"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:fontFamily="@font/amiko_semibold"
             android:text="@string/calendar"
-            android:textSize="20sp"/>
+            android:textAlignment="center"
+            android:textColor="@color/gray"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/btn_month_right"
@@ -40,8 +47,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00FFFFFF"
-            android:text="next"
+            android:fontFamily="@font/amiko_bold"
             android:onClick="nextMonth"
+            android:text="next"
             android:textColor="@color/blue"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -57,57 +65,71 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="SUN"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/gray"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="MON"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/gray"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="TUE"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/gray"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="WED"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/gray"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="THU"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/gray"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="FRI"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/gray"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
             android:text="SAT"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/gray"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
