--- a/Assist/app/src/main/res/layout/activity_edit_event.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_event.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".EditEventActivity">
 
+    <include
+        android:id="@+id/include3"
+        layout="@layout/toolbar_edit" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_edit_event_left"
         android:layout_width="wrap_content"
@@ -31,30 +35,33 @@
         android:id="@+id/et_edit_event_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/clear_edit_field"
-        android:fontFamily="sans-serif-medium"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/round_corner"
+        android:fontFamily="@font/amiko_bold"
         android:hint="@string/event_name"
         android:inputType="text"
         android:padding="5dp"
         android:text="Biology Exam #1"
+        android:textColor="@color/gray"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/include3" />
 
     <EditText
         android:id="@+id/et_edit_event_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="@drawable/clear_edit_field"
+        android:background="@drawable/round_corner"
+        android:drawableLeft="@drawable/calendar_icon"
+        android:drawablePadding="8dp"
+        android:fontFamily="@font/amiko_semibold"
         android:hint="@string/date"
         android:inputType="date"
         android:padding="3dp"
         android:text="Wednesday, August 11, 2021"
-        android:drawableLeft="@drawable/calendar_icon"
-        android:drawablePadding="8dp"
+        android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
@@ -66,13 +73,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/clear_edit_field"
+        android:background="@drawable/round_corner"
         android:drawableLeft="@drawable/clock_icon"
         android:drawablePadding="8dp"
+        android:fontFamily="@font/amiko_semibold"
         android:hint="@string/start_time"
         android:inputType="time"
         android:padding="3dp"
         android:text="7:00 am"
+        android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/tv_edit_to"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_event_date" />
@@ -83,13 +92,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/clear_edit_field"
+        android:background="@drawable/round_corner"
         android:drawableLeft="@drawable/clock_icon"
         android:drawablePadding="8dp"
+        android:fontFamily="@font/amiko_semibold"
         android:hint="@string/end_time"
         android:inputType="time"
         android:padding="3dp"
         android:text="8:30 am"
+        android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintStart_toEndOf="@+id/tv_edit_to"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_event_date" />
@@ -99,13 +110,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/clear_edit_field"
+        android:background="@drawable/round_corner"
+        android:drawableLeft="@drawable/template_icon"
+        android:drawablePadding="8dp"
+        android:fontFamily="@font/amiko_semibold"
         android:hint="@string/template"
         android:inputType="text"
         android:padding="3dp"
         android:text="Biology Exam #1 Template"
-        android:drawableLeft="@drawable/template_icon"
-        android:drawablePadding="8dp"
+        android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
@@ -116,57 +129,67 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/clear_edit_field"
+        android:background="@drawable/round_corner"
+        android:drawableLeft="@drawable/bell_icon"
+        android:drawablePadding="8dp"
+        android:fontFamily="@font/amiko_semibold"
         android:hint="@string/notif_time"
         android:inputType="text"
         android:padding="3dp"
         android:text="1 hour before"
-        android:drawableLeft="@drawable/bell_icon"
-        android:drawablePadding="8dp"
+        android:textColor="@color/gray"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_event_template" />
 
     <Button
-        android:id="@+id/btn_edit_delete_event"
+        android:id="@+id/btn_edit_event_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="@color/red"
-        android:text="@string/delete_event"
-        android:textSize="16sp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#9C1111"
+
+        android:fontFamily="@font/amiko_semibold"
+        android:text="Delete Event"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        app:icon="@drawable/deleteicon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/btn_edit_groups"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/dark_blue"
-        android:text="@string/groups"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder" />
-
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/cg_edit_groups"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_edit_event_groups"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/btn_edit_groups" />
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder">>
+        <AutoCompleteTextView
+            android:id="@+id/ac_edit_event_groups"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/amiko_semibold"
+            android:inputType="none"
+            android:text="Groups"
+            android:textSize="18sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/tv_edit_to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/amiko_semibold"
         android:padding="3dp"
         android:text="to"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
