--- a/Assist/app/src/main/res/layout/activity_edit_group.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_group.xml
@@ -9,7 +9,7 @@
         layout="@layout/toolbar_edit" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/ivProfilePic"
+        android:id="@+id/iv_edit_group_picture"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginTop="8dp"
@@ -20,31 +20,32 @@
         app:layout_constraintTop_toBottomOf="@+id/include3" />
 
     <TextView
-        android:id="@+id/tvAddPhoto"
+        android:id="@+id/tv_edit_group_add_pic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/amiko_semibold"
         android:text="Add Photo"
         android:textColor="#116ACC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_edit_group_picture" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glLeft2"
+        android:id="@+id/gl_edit_group_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="30dp" />
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glRight2"
+        android:id="@+id/gl_edit_group_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_end="30dp" />
 
-    <TextView
-        android:id="@+id/tvFName"
+    <EditText
+        android:id="@+id/et_edit_group_gname"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
@@ -53,54 +54,55 @@
         android:background="@drawable/round_corner"
         android:drawableLeft="@drawable/personicon"
         android:drawablePadding="8dp"
-
+        android:fontFamily="@font/amiko_semibold"
         android:gravity="center_vertical"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
         android:text="Grade 5 - Service"
         android:textColor="@color/gray"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/glRight2"
-        app:layout_constraintStart_toStartOf="@+id/glLeft2"
-        app:layout_constraintTop_toBottomOf="@+id/tvAddPhoto" />
+        app:layout_constraintEnd_toStartOf="@+id/gl_edit_group_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_group_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_edit_group_add_pic" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilGrp"
+        android:id="@+id/til_edit_contact_groups"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/glRight2"
-        app:layout_constraintStart_toStartOf="@+id/glLeft2"
-        app:layout_constraintTop_toBottomOf="@+id/tvFName">
+        app:layout_constraintEnd_toStartOf="@+id/gl_edit_group_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_group_left"
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_group_gname">
 
         <AutoCompleteTextView
-            android:id="@+id/autoChecklists"
+            android:id="@+id/ac_edit_group_members"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
 
+            android:fontFamily="@font/amiko_semibold"
             android:inputType="none"
             android:text="Members"
+            android:textColor="@color/gray"
             android:textSize="18sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnDelete"
+        android:id="@+id/btn_edt_group_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:backgroundTint="#9C1111"
 
+        android:fontFamily="@font/amiko_semibold"
         android:text="Delete Group"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:icon="@drawable/deleteicon"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/glRight2"
-        app:layout_constraintStart_toStartOf="@+id/glLeft2" />
+        app:layout_constraintEnd_toStartOf="@+id/gl_edit_group_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_group_left" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
