--- a/Assist/app/src/main/res/layout/activity_edit_template.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_template.xml
@@ -11,27 +11,28 @@
 
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glLeft3"
+        android:id="@+id/gl_edit_template_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="30dp" />
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glRight3"
+        android:id="@+id/gl_edit_template_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="30dp" />
+        app:layout_constraintGuide_percent="0.95" />
 
 
     <TextView
-        android:id="@+id/tvTitleEdit"
+        android:id="@+id/et_edit_template_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
 
         android:background="@drawable/round_corner"
+        android:fontFamily="@font/amiko_bold"
         android:gravity="center_vertical"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
@@ -44,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/include7" />
 
     <TextView
-        android:id="@+id/tvSubject"
+        android:id="@+id/et_edit_template_subject"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
@@ -53,15 +54,17 @@
         android:drawableLeft="@drawable/subjecticon"
         android:drawablePadding="16dp"
 
+        android:fontFamily="@font/amiko_bold"
         android:gravity="center_vertical"
         android:text="Biology Exam #1"
+        android:textColor="@color/gray"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/glLeft3"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitleEdit" />
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_template_left"
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_template_title" />
 
     <TextView
-        android:id="@+id/tvNotes"
+        android:id="@+id/et_edit_template_notes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -71,26 +74,29 @@
         android:drawableLeft="@drawable/notesicon"
         android:drawablePadding="16dp"
 
+        android:fontFamily="@font/amiko_semibold"
         android:gravity="center_vertical"
         android:text="Please take note of the following for your exam tomorrow:"
+        android:textColor="@color/gray"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/glRight3"
-        app:layout_constraintStart_toStartOf="@+id/glLeft3"
-        app:layout_constraintTop_toBottomOf="@+id/tvSubject" />
+        app:layout_constraintEnd_toEndOf="@+id/gl_edit_template_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_template_left"
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_template_subject" />
 
     <Button
-        android:id="@+id/btnDelete"
+        android:id="@+id/btn_edit_template_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:backgroundTint="#9C1111"
 
+        android:fontFamily="@font/amiko_semibold"
         android:text="Delete Template"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:icon="@drawable/deleteicon"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/glRight3"
-        app:layout_constraintStart_toStartOf="@+id/glLeft3" />
+        app:layout_constraintEnd_toStartOf="@+id/gl_edit_template_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_template_left" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
