--- a/Assist/app/src/main/res/layout/activity_template.xml
+++ b/Assist/app/src/main/res/layout/activity_template.xml
@@ -9,26 +9,29 @@
         layout="@layout/toolbar_view" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glLeft4"
+        android:id="@+id/gl_view_template_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="30dp" />
+        app:layout_constraintGuide_begin="30dp"
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glRight4"
+        android:id="@+id/gl_view_template_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="30dp" />
+        app:layout_constraintGuide_end="30dp"
+        app:layout_constraintGuide_percent="0.95" />
 
 
     <TextView
-        android:id="@+id/tvTitleEdit"
+        android:id="@+id/tv_view_template_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/amiko_bold"
         android:gravity="center_vertical"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
@@ -41,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/include4" />
 
     <TextView
-        android:id="@+id/tvSubject"
+        android:id="@+id/tv_view_template_subject"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
@@ -49,15 +52,17 @@
         android:drawableLeft="@drawable/subjecticon"
         android:drawablePadding="16dp"
 
+        android:fontFamily="@font/amiko_bold"
         android:gravity="center_vertical"
         android:text="Biology Exam #1"
-        android:textSize="16sp"
+        android:textColor="@color/gray"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/glLeft4"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitleEdit" />
+        app:layout_constraintStart_toStartOf="@+id/gl_view_template_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_template_title" />
 
     <TextView
-        android:id="@+id/tvNotes"
+        android:id="@+id/tv_view_template_notes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -66,26 +71,13 @@
         android:drawableLeft="@drawable/notesicon"
         android:drawablePadding="16dp"
 
+        android:fontFamily="@font/amiko_semibold"
         android:gravity="center_vertical"
         android:text="Please take note of the following for your exam tomorrow:"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/glRight4"
-        app:layout_constraintStart_toStartOf="@+id/glLeft4"
-        app:layout_constraintTop_toBottomOf="@+id/tvSubject" />
-
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#9C1111"
-
-        android:text="Delete Template"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        app:icon="@drawable/deleteicon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/glRight4"
-        app:layout_constraintStart_toStartOf="@+id/glLeft4" />
+        android:textColor="@color/gray"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/gl_view_template_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_view_template_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_view_template_subject" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
