--- a/Assist/app/src/main/res/layout/dropdown_item.xml
+++ b/Assist/app/src/main/res/layout/dropdown_item.xml
@@ -1,9 +1,9 @@
-<TextView
-    android:id="@+id/tvItems"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv_dropdown_"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="TextView"
+    android:fontFamily="@font/amiko_semibold"
     android:padding="15dp"
-    android:textSize="16sp"
+    android:text="TextView"
     android:textColor="@color/gray"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:textSize="16sp" />
