--- a/Assist/app/src/main/res/layout/dropdown_item_edit.xml
+++ b/Assist/app/src/main/res/layout/dropdown_item_edit.xml
@@ -4,15 +4,17 @@
     android:layout_height="wrap_content" >
 
     <TextView
+        android:id="@+id/tv_edit_dropdown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:fontFamily="@font/amiko_semibold"
         android:padding="15dp"
-        android:textSize="16sp"
-        android:textColor="@color/gray" />
+        android:text="TextView"
+        android:textColor="@color/gray"
+        android:textSize="16sp" />
 
     <ImageButton
-        android:id="@+id/btnDeleteGrp"
+        android:id="@+id/btn_edit_dropdown_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
