--- a/Assist/app/src/main/res/layout/toolbar_menu.xml
+++ b/Assist/app/src/main/res/layout/toolbar_menu.xml
@@ -8,43 +8,39 @@
     android:elevation="20dp">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_toolbar_edit"
+        android:id="@+id/gl_toolbar_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="60dp" />
 
-    <ImageView
-        android:id="@+id/iv_toolbar_edit_left"
-        android:layout_width="20dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/gl_toolbar_edit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/cancelicon" />
 
     <TextView
-        android:id="@+id/tv_toolbar_edit_title"
+        android:id="@+id/tv_toolbar_menu_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/amiko_bold"
-        android:text="Edit Contact"
+        android:text="Assist"
+        android:textAlignment="center"
         android:textColor="@color/gray"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/iv_toolbar_edit_right"
-        app:layout_constraintStart_toEndOf="@+id/iv_toolbar_edit_left"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_toolbar_edit_right"
-        android:layout_width="20dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/tv_toolbar_menu_sub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/amiko_semibold"
+        android:text="The Ultimate Assistant of Teachers"
+        android:textAlignment="center"
+        android:textColor="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/doneicon" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_menu_title" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
