--- a/Assist/app/src/main/res/values/colors.xml
+++ b/Assist/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -13,4 +13,6 @@
     <color name="red">#BA0000</color>
     <color name="gray">#374151</color>
     <color name="red_theme">#FD4E5D</color>
+    <color name="box_outline">#9CA3AF</color>
+
 </resources>
